# Interactive-Image-Processing-Toolkit

./: .gitignore  CMakeLists.txt
AlgorithmImplementation/: CMakeLists.txt  main.cpp
AlgorithmImplementation/include/: ImageConverter.h  ImageIO.h  ImageIntensityTransformation.h  ImageMorphology.h  ImageSpatialTransformation.h  ImageUtils.h
AlgorithmImplementation/src/: ImageConverter.cpp  ImageIO.cpp  ImageIntensityTransformation.cpp  ImageMorphology.cpp  ImageSpatialTransformation.cpp  ImageUtils.cpp
InteractiveImageProcessingToolkit_GUI/: CMakeLists.txt  imageqtadapter.cpp  imageqtadapter.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
